--- a/controller.css
+++ b/controller.css
@@ -1,6 +1,6 @@
 /*BEGIN Xbox One Controller Styling*/
 .controller.custom{
-    /* background: url(http://mrmcpowned.com/gamepad/xbox-assets/base.svgz); */
+    background: url(https://i.imgur.com/LpZA5cX.png);
     height: 630px;
     width: 750px;
     margin-left: -375px;
