--- a/edit.css
+++ b/edit.css
@@ -3,7 +3,7 @@
 }
 
 .edit.disconnected {
-  background: url(https://i.imgur.com/VXbbjZj.png);
+  background: url(https://i.imgur.com/dZei3y8.png);
 }
 
 .edit .quadrant {
