--- a/edit.css
+++ b/edit.css
@@ -1,5 +1,5 @@
 .controller.edit {
-  background: url(https://i.imgur.com/Sv97tPs.png);
+  background: url(https://i.imgur.com/l5TUoVW.png);
 }
 
 .edit.disconnected {
